--- a/app/templates/disasters.html
+++ b/app/templates/disasters.html
@@ -1,4 +1,4 @@
-<div  layout="column" ng-cloak style="height: 100%">
+<div  layout="column" ng-cloak style="height: 100%" ng-controller="DisastersCtrl">
     <md-toolbar class="md-accent">
         <div class="md-toolbar-tools">
             <h2 class="md-flex">
@@ -14,10 +14,10 @@
         </div>
         <div class="md-toolbar-tools md-toolbar-tools-bottom">
             <md-button-group>
-                <md-button md-colors="{background: 'primary'}"><md-icon class="wi wi-fire"></md-icon> Fire <md-icon class="close">close</md-icon></md-button>
-                <md-button><md-icon class="wi wi-earthquake"></md-icon> Earthquake <md-icon class="close">close</md-icon></md-button>
-                <md-button><md-icon class="wi wi-flood"></md-icon> Flood <md-icon class="close">close</md-icon></md-button>
-                <md-button><md-icon class="wi wi-tsunami"></md-icon> Tsunami <md-icon class="close">close</md-icon></md-button>
+                <md-button ng-click="filter(0)" md-colors="{background: btnColors[0]}"><md-icon class="wi wi-fire"></md-icon> Fire <md-icon ng-show="isOn[0]" class="close">close</md-icon></md-button>
+                <md-button ng-click="filter(1)" md-colors="{background: btnColors[1]}"><md-icon class="wi wi-earthquake"></md-icon> Earthquake <md-icon ng-show="isOn[1]" class="close">close</md-icon></md-button>
+                <md-button ng-click="filter(2)" md-colors="{background: btnColors[2]}"><md-icon class="wi wi-flood"></md-icon> Flood <md-icon ng-show="isOn[2]" class="close">close</md-icon></md-button>
+                <md-button ng-click="filter(3)" md-colors="{background: btnColors[3]}"><md-icon class="wi wi-tsunami"></md-icon> Tsunami <md-icon ng-show="isOn[3]" class="close">close</md-icon></md-button>
             </md-button-group>
         </div>
     </md-toolbar>
