--- a/app/templates/disasters.html
+++ b/app/templates/disasters.html
@@ -21,4 +21,13 @@
             </md-button-group>
         </div>
     </md-toolbar>
+    <md-content flex layout-fill style="height:100%">
+        <md-list flex>
+            <md-list-item class="md-3-line" ng-repeat="fire in fireData" ng-click="null">
+              <div class="md-list-item-text" layout="column">
+                <h3>{{ fire.properties.title }}</h3>
+              </div>
+            </md-list-item>
+        </md-list>
+    </md-content>
 </div>
