--- a/app/templates/disasters.html
+++ b/app/templates/disasters.html
@@ -23,9 +23,9 @@
     </md-toolbar>
     <md-content flex layout-fill style="height:100%">
         <md-list flex>
-            <md-list-item class="md-3-line" ng-repeat="fire in fireData" ng-click="null">
+            <md-list-item class="md-3-line" ng-repeat="earth in earthData" ng-click="null">
               <div class="md-list-item-text" layout="column">
-                <h3>{{ fire.properties.title }}</h3>
+                <h3>{{ earth.properties.title }}</h3>
               </div>
             </md-list-item>
         </md-list>
