added favourite button for toggling

--- a/app/templates/weather.list.html
+++ b/app/templates/weather.list.html
@@ -9,6 +9,6 @@
 			</h4>
 		</div>
 
-		<md-icon class="md-secondary" md-colors="{color: 'primary'}" md-font-library="material-icons" ng-click="favourate(); $event.stopPropagation();">star</md-icon>
+		<md-icon class="md-secondary" md-colors="{color: 'primary'}" md-font-library="material-icons" ng-click="favourate(data); $event.stopPropagation();">star</md-icon>
 	</md-list-item>
 </md-list>
