fix error of controller loading twice

--- a/app/templates/weather.forecast.html
+++ b/app/templates/weather.forecast.html
@@ -1,4 +1,4 @@
-<md-list ng-model="gis.weather" ng-controller="WeatherCtrl">
+<md-list ng-model="gis.weather">
 	<md-list-item style="padding: 0">
 		<md-card md-theme-watch md-colors="{background: 'mycolor-300'}" style="margin-bottom: 0" flex>
         <md-card-title layout="row">
