--- a/app/templates/weather.list.html
+++ b/app/templates/weather.list.html
@@ -1,6 +1,6 @@
-<md-list ng-model="gis.weather" ng-controller="WeatherCtrl">
+<md-list ng-model="gis.weather">
 	<md-subheader class="md-no-sticky">Searched locations (Favourates)</md-subheader>
-	<md-list-item ng-repeat="data in favourates" class="md-3-line" ng-click="loadWeather(data)">
+	<md-list-item ng-repeat="data in favourates track by $index" class="md-3-line" ng-click="loadWeather(data)">
 		<md-icon md-font-library="material-icons">place</md-icon>
 		<div class="md-list-item-text" layout="column">
 			<h3 style="font-weight:bold">{{data.properties.name}}</h3>
@@ -9,6 +9,6 @@
 			</h4>
 		</div>
 
-		<md-icon class="md-secondary" md-colors="{color: 'primary'}" md-font-library="material-icons" ng-click="favourate(data); $event.stopPropagation();">star</md-icon>
+		<md-icon class="md-secondary" md-colors="{color: '{{colors[$index]}}'}"  aria-label="star" md-font-library="material-icons" ng-click="favourate(data,$index); $event.stopPropagation();">star</md-icon>
 	</md-list-item>
 </md-list>
