load favourites from backend

--- a/app/templates/weather.html
+++ b/app/templates/weather.html
@@ -1,4 +1,4 @@
-<div  layout="column" ng-cloak style="height: 100%" ng-controller="WeatherCtrl">
+<div  layout="column" ng-cloak style="height: 100%" ng-controller="WeatherCtrl" data-ng-init="init()">
   	<md-toolbar class="md-accent">
   		<div class="md-toolbar-tools" ng-init="isActive = false">
 			<md-button class="md-icon-button" aria-label="back" ng-click="back()" ng-show="isActive">
