--- a/app/templates/disasters.html
+++ b/app/templates/disasters.html
@@ -1,4 +1,4 @@
-<div  layout="column" ng-cloak style="height: 100%" ng-controller="DisastersCtrl">
+<div  layout="column" ng-cloak style="height: 100%" ng-controller="DisastersCtrl" ng-init="init()">
     <md-toolbar class="md-accent">
         <div class="md-toolbar-tools">
             <h2 class="md-flex">
